tests/typing/fail/timed_calldata.act
contract Fail

constructor(uint y)

creates

  uint x := y

ensures

  post(x) >= pre(y)
